--- a/test.ipynb
+++ b/test.ipynb
@@ -113,12 +113,58 @@
    "execution_count": 7
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-24T19:38:25.878667Z",
+     "start_time": "2024-11-24T19:38:25.872316Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "a=None",
+   "id": "a79be03acec33aa4",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-24T19:38:26.596733Z",
+     "start_time": "2024-11-24T19:38:26.589190Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(type(a))",
+   "id": "951c0699050ecf53",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'NoneType'>\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "cell_type": "code",
+   "source": "65536/8",
+   "id": "5f89bff192ea134d",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "a79be03acec33aa4"
+   "id": "9a46d7e73e8e3a20"
   }
  ],
  "metadata": {
